feat: get product by id  api
