# src/apps/ecom/backend/controllers/index.ts
@@ -6,3 +6,4 @@ export * from "./users/user-login.controller"
 export * from "./admin/admin-create-category.controller"
 export * from "./admin/admin-create-product.controller"
 export * from "./products/get-all-products.controller"
+export * from "./products/get-product-by-id.controller"
